# Integrated-Care-Platform

./: .dockerignore  .gitignore  README.md  data-pipeline-improvements.md  pyproject.toml  pytest.ini  requirements.txt  security-vulnerabilities-and-improvements.md  seoul-care-plus-comprehensive-architecture.md
apps/: README.md
apps/admin/: README.md
apps/admin-service/: Dockerfile  README.md  alembic.ini
apps/admin-service/alembic/: README.md  env.py
apps/admin-service/alembic/versions/: admin_0001_init.py
apps/admin-service/src/admin_service/: __main__.py  airflow_client.py  app.py  response.py  schemas.py  store.py
apps/admin-service/tests/: test_admin_service.py  test_airflow_client.py
apps/api/: Dockerfile.api  Dockerfile.event-consumer  Dockerfile.event-dlq-retry  Dockerfile.event-parking-monitor  README.md
apps/api/src/api/: __init__.py  __main__.py  app.py  cache.py  circuit_breaker.py  dependencies.py  errors.py  event_consumer.py  event_dedup.py  event_dlq_retry.py  event_parking_monitor.py  middleware.py  observability.py  proxy.py  rate_limit.py  response.py  security.py  telemetry.py
apps/api/src/api/clients/: facility_provider_client.py  safe_number_provider_client.py
apps/api/tests/: test_app_api.py  test_cache.py  test_circuit_breaker.py  test_event_consumer.py  test_event_dedup.py  test_event_dlq_retry.py  test_event_parking_monitor.py  test_facility_provider_client.py  test_geo_api.py  test_internal_events.py  test_observability.py  test_rate_limit.py  test_rate_limit_redis.py  test_response.py  test_trust_safety_api.py
apps/auth-service/: Dockerfile  README.md  alembic.ini
apps/auth-service/alembic/: README.md  env.py
apps/auth-service/alembic/versions/: auth_0001_init.py  auth_0002_users_sso.py
apps/auth-service/src/auth_service/: __main__.py  app.py  rate_limit.py  response.py  schemas.py  sso.py  store.py  token_store.py  user_bootstrap_client.py
apps/auth-service/tests/: test_auth_service.py  test_auth_store.py  test_sso_client.py  test_user_bootstrap_client.py
apps/facility-service/: Dockerfile  README.md  alembic.ini
apps/facility-service/alembic/: README.md  env.py
apps/facility-service/alembic/versions/: facility_0001_init.py
apps/facility-service/src/facility_service/: __init__.py  __main__.py  app.py  schemas.py  store.py
apps/facility-service/tests/: test_facility_service.py
apps/search-service/: Dockerfile  README.md  alembic.ini
apps/search-service/alembic/: README.md  env.py
apps/search-service/alembic/versions/: search_0001_init.py
apps/search-service/src/search_service/: __main__.py  app.py  schemas.py  store.py
apps/search-service/tests/: test_search_service.py
apps/user-service/: Dockerfile  README.md  alembic.ini
apps/user-service/alembic/: README.md  env.py
apps/user-service/alembic/versions/: user_0001_init.py  user_0002_user_columns_extensible.py  user_0003_backfill_from_auth.py
apps/user-service/src/user_service/: __main__.py  app.py  models.py  schemas.py  store.py
apps/user-service/tests/: test_user_service.py
apps/web/: README.md
docs/: development.md
docs/architecture/: data-model.md  service-schemas.sql  system-architecture.md
docs/operations/: airflow-runbook.md  k8s-aks-runbook.md  runtime-runbook.md
docs/product/: prd-v2-seoul-care-plus.md
docs/roadmap/: feature-todo.md  mvp-execution-plan.md
infra/helm/integrated-care/: .helmignore  Chart.yaml  README.md  values-aks.yaml  values-local-private.yaml  values-mode-dev.yaml  values-mode-prod.yaml  values.yaml
infra/helm/integrated-care/templates/: _helpers.tpl  admin-service-deployment.yaml  admin-service-service.yaml  airflow-admin-dags-configmap.yaml  api-deployment.yaml  api-event-consumer-deployment.yaml  api-event-dlq-retry-deployment.yaml  api-event-parking-monitor-deployment.yaml  api-hpa.yaml  api-pdb.yaml  api-service.yaml  auth-service-deployment.yaml  auth-service-service.yaml  configmap.yaml  db-migration-jobs.yaml  etl-cronjob.yaml  facility-service-deployment.yaml  facility-service-service.yaml  ingress.yaml  kafka-topic-provisioner-job.yaml  networkpolicy.yaml  pipeline-monitoring-deployment.yaml  pipeline-monitoring-pdb.yaml  pipeline-monitoring-service.yaml  search-service-deployment.yaml  search-service-service.yaml  secret.yaml  serviceaccount.yaml  servicemonitor.yaml  user-service-deployment.yaml  user-service-service.yaml
infra/k8s/base/: api-deployment.yaml  api-hpa.yaml  api-service.yaml  configmap.yaml  kustomization.yaml  namespace.yaml  pipeline-monitoring-deployment.yaml  pipeline-monitoring-service.yaml  secret.template.yaml  servicemonitor.yaml
scripts/: run-admin-service.sh  run-api-event-consumer.sh  run-api-event-dlq-retry.sh  run-api-event-parking-monitor.sh  run-api.sh  run-data-pipeline-job.sh  run-data-pipeline-monitoring.sh  run-tests.sh  setup-venv.ps1
(+18 files in other folders)
