[project]
name = "integrated-care-platform"
version = "0.1.0"
description = "서울형 통합 돌봄 중개 플랫폼 (Seoul Care Plus)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "prometheus-client>=0.20.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "asyncpg>=0.30.0",
    "aiokafka>=0.11.0",
    "pydantic-settings>=2.2.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
orchestration = [
    "apache-airflow>=2.9,<3.0",
]

[tool.pytest.ini_options]
pythonpath = [
    "apps/api/src",
    "apps/auth-service/src",
    "apps/user-service/src",
    "apps/facility-service/src",
    "apps/search-service/src",
    "packages/shared/src",
    "packages/devkit/src",
    "packages/data-pipeline/src",
    "packages/geo-engine/src",
    "packages/trust-safety/src",
]
addopts = "-p no:cacheprovider -v"
asyncio_mode = "auto"
testpaths = [
    "apps/api/tests",
    "apps/auth-service/tests",
    "apps/user-service/tests",
    "apps/facility-service/tests",
    "apps/search-service/tests",
    "packages/data-pipeline/tests",
    "packages/geo-engine/tests",
    "packages/trust-safety/tests",
    "packages/devkit/tests",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = [
    "apps/api/src",
    "apps/auth-service/src",
    "apps/user-service/src",
    "apps/facility-service/src",
    "apps/search-service/src",
    "packages/shared/src",
    "packages/devkit/src",
    "packages/data-pipeline/src",
    "packages/geo-engine/src",
    "packages/trust-safety/src",
    "apps/api/tests",
    "apps/auth-service/tests",
    "apps/user-service/tests",
    "apps/facility-service/tests",
    "apps/search-service/tests",
    "packages/data-pipeline/tests",
    "packages/geo-engine/tests",
    "packages/trust-safety/tests",
    "packages/devkit/tests",
]
exclude = ["__pycache__", ".git"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
path = [
    "apps/api/src",
    "packages/data-pipeline/src",
    "packages/geo-engine/src",
    "packages/trust-safety/src",
]
disallow_untyped_defs = true
